fix cnnattn, refactor, img-clawler

--- a/Getting-data/recipe-clawler/recipe-clawer.ipynb
+++ b/Getting-data/recipe-clawler/recipe-clawer.ipynb
@@ -114,40 +114,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "source": [
-        "all_recipe_url[:3]"
+        "saved_url = {\r\n",
+        "    menu: url for (menu, url) in zip(menus, all_recipe_url)\r\n",
+        "}\r\n",
+        "\r\n",
+        "# To make sure there is no duplicated url\r\n",
+        "unique_url = list(set(all_recipe_url))\r\n",
+        "\r\n",
+        "unique_url_check = unique_url.copy()\r\n",
+        "saved_url_nonDup = {}\r\n",
+        "for menu, url in saved_url.items():\r\n",
+        "    if url in unique_url_check:\r\n",
+        "        saved_url_nonDup[menu] = url\r\n",
+        "        unique_url_check.remove(url)\r\n",
+        "\r\n",
+        "import json\r\n",
+        "\r\n",
+        "json.dump(saved_url_nonDup, open('menu_url_nonDup.json', 'w'))"
       ],
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['https://veenaazmanov.com/homemade-chocolate-birthday-cake-recipe/',\n",
-              " 'https://veenaazmanov.com/chocolate-fudge-cake/',\n",
-              " 'https://veenaazmanov.com/gluten-free-chocolate-cake-recipe/']"
+              "770"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 10
         }
       ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Yp3zUkGdUk5e",
-        "outputId": "d58cf4d2-b29f-4950-c53d-c81e893244df"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 31,
-      "source": [
-        "with open('unique_url.txt','w') as f:\r\n",
-        "    f.write('\\n'.join(unique_url))"
-      ],
-      "outputs": [],
       "metadata": {}
     },
     {
@@ -157,10 +155,10 @@
         "import sys\r\n",
         "import time\r\n",
         "\r\n",
+        "\r\n",
         "data = {}\r\n",
         "non_menu_url = []\r\n",
         "error_url = []\r\n",
-        "unique_url = list(set(all_recipe_url))  # To make sure there is no duplicated url\r\n",
         "\r\n",
         "for url in unique_url:\r\n",
         "\r\n",
