--- a/Getting-data/img-clawler/img-clawler.ipynb
+++ b/Getting-data/img-clawler/img-clawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "source": [
     "from bs4 import BeautifulSoup\r\n",
     "import requests\r\n",
@@ -16,12 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "source": [
-    "# Try one\r\n",
-    "page = requests.get(menu_url_nonDup_doublet[4][1]).content\r\n",
-    "soup = BeautifulSoup(page, \"html.parser\")\r\n",
-    "\r\n",
     "menu_url_nonDup_doublet[4]"
    ],
    "outputs": [
@@ -34,14 +30,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "source": [
     "from collections import defaultdict\r\n",
     "\r\n",
@@ -53,8 +49,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ## figure->div->img< alt have 'Progress', 'Ingredients'> : Not a dish's image"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "source": [
     "import sys\r\n",
     "import time\r\n",
@@ -89,7 +92,10 @@
     "\r\n",
     "    for img in imgs:\r\n",
     "        img_tag = img.img\r\n",
-    "        if not img_tag['alt'].lower().startswith(\"ingredients\"):\r\n",
+    "        if (\r\n",
+    "            not img_tag['alt'].lower().startswith(\"ingredients\") and \r\n",
+    "            not img_tag['alt'].lower().startswith(\"progress\")\r\n",
+    "        ):\r\n",
     "            try:\r\n",
     "                menu_imgs[menu].append(img_tag['data-lazy-src'])\r\n",
     "            except KeyError as e:\r\n",
@@ -136,17 +142,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "source": [
-    "print(len(menu_imgs))\r\n",
-    "json.dump(menu_imgs, open(\"menu_imgs_url.json\",\"w\"))"
+    "n_imgs = 0\r\n",
+    "n_menus = 0\r\n",
+    "\r\n",
+    "for menu, urls in menu_imgs.items():\r\n",
+    "    n_imgs+=len(urls)\r\n",
+    "    n_menus+=1\r\n",
+    "\r\n",
+    "print(f'Totally number of menus: {n_menus}')\r\n",
+    "print(f'Totally collected images: {n_imgs}')"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "744\n"
+      "Totally number of menus: 744\n",
+      "Totally collected images: 2976\n"
      ]
     }
    ],
@@ -154,7 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
+   "source": [
+    "json.dump(menu_imgs, open(\"menu_imgs_url.json\",\"w\"))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "source": [
     "content_err"
    ],
@@ -167,14 +190,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 80
+     "execution_count": 14
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "source": [
     "json.dump(img_not_detected, open(\"img_not_detected.json\",\"w\"))\r\n",
     "img_not_detected"
@@ -209,22 +232,41 @@
       ]
      },
      "metadata": {},
-     "execution_count": 84
+     "execution_count": 15
     }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "> ## figure->div->img< alt have 'Progress', 'Ingredients'> : Not a dish's image"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "from collections import defaultdict\r\n",
+    "import shutil\r\n",
+    "import time\r\n",
+    "import sys\r\n",
+    "import os\r\n",
+    "\r\n",
+    "menu_urls = json.load(open(\"menu_imgs_url.json\", \"r\"))\r\n",
+    "\r\n",
+    "images = defaultdict(lambda: [])\r\n",
+    "os.mkdir('images')\r\n",
+    "\r\n",
+    "for menu, urls in list(menu_urls.items()):\r\n",
+    "    \r\n",
+    "    for i, url in enumerate(urls):\r\n",
+    "        image = requests.get(url)\r\n",
+    "        \r\n",
+    "        path = f\"images/{menu}_{i}.jpg\"\r\n",
+    "        images[menu].append(path)\r\n",
+    "        with open(path, \"wb\") as f:\r\n",
+    "            f.write(image.content)\r\n",
+    "    \r\n",
+    "    print(f'Progress: {(len(images)/len(menu_urls)):.2f}', end='\\r')\r\n",
+    "    time.sleep(0.1)\r\n",
+    "\r\n",
+    "json.dump(dict(images), open(\"image_path.json\",\"w\"))"
+   ],
    "outputs": [],
    "metadata": {}
   }
