Done getting data

--- a/Getting-data/img-clawler/img-clawler.ipynb
+++ b/Getting-data/img-clawler/img-clawler.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "source": [
     "from bs4 import BeautifulSoup\r\n",
     "import requests\r\n",
     "import json\r\n",
     "\r\n",
     "menu_url_nonDup = json.load(open('../recipe-clawler/menu_url_nonDup.json', 'r'))\r\n",
-    "menu_url_nonDup_doublet = list(menu_url_nonDup.items())"
+    "menu_url_nonDup_doublet = list(menu_url_nonDup.items())\r\n",
+    "\r\n",
+    "print(f'all items: {len(menu_url_nonDup_doublet)}')"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "all items: 768\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
